--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-transformer-sharp": "^2.2.20",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-alice-carousel": "^1.17.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.10.2",
     "react-feather": "^2.0.3",
